--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 Sphinx==3.4.3
 sphinx-tabs==1.3.0
 sphinx-rtd-theme==0.5.0
+sphinx-tabs==2.0.1
 git+git://github.com/VanDavv/rtd-redirects.git@3e7333898acad533b37c9de426f1f2ef258d756b
 breathe==4.26.0
 git+git://github.com/luxonis/pybind11_mkdoc.git@master
