--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -23,8 +23,9 @@ jobs:
         id: vars
         run: echo ::set-output name=short_ref::${GITHUB_REF#refs/*/}
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: crazy-max/ghaction-docker-buildx@v1
         with:
-          push: true
-          file: ci/Dockerfile
-          tags: luxonis/depthai-library:${{ steps.vars.outputs.short_ref }}
+          version: latest
+      - name: Build and push
+        run: |
+          docker buildx build --push --platform linux/arm64,linux/amd64,linux/arm/v7 -t luxonis/depthai-library:${{ steps.vars.outputs.short_ref }} -f ci/Dockerfile .
